Made edits after review